# RoboCar_StereoCamera

./: CMakeLists.txt
calibration/: camera_right.xml
include/: camera_calibration.hpp  feature_extraction.hpp
src/: CMakeLists.txt  camera_calibration.cpp  feature_extraction.cpp
test/: CMakeLists.txt  main.cpp
test/calibration/: camera_left.xml  stereoCalibration0812.xml
